--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@mermaid-js/mermaid-cli": "^10.2.2",
     "dotenv": "^16.1.4",
     "mermaid-cli": "^0.2.4",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
