--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "text-to-design",
+  "name": "gpt-text-to-diagram",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "description": "Using OpenAI GPT models, from a description of a software system or other entity diagram, generate a design diagram image or PDF.",
+  "main": "dist/src/main.js",
+  "bin": "dist/src/main.js",
   "author": "Jake Cyr",
   "license": "ISC",
   "scripts": {
-    "start": "node main.js"
+    "start": "node dist/src/main.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "build": "tsc"
   },
   "keywords": [
     "chatgpt",
+    "machine-learning",
+    "openai",
     "gpt",
     "design diagram",
     "software"
   ],
   "dependencies": {
+    "axios": "^1.4.0",
+    "commander": "^10.0.1",
     "dotenv": "^16.1.4",
     "markdown-mermaid-exporter": "^1.0.1",
     "openai": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
+    "typescript": "^5.1.3"
   }
 }
